[package]
name = "self_driving_car"
version = "0.1.0"
edition = "2021"


[dependencies]
leptos = "0.1.1"
leptos_meta = "0.1.1"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"
simple_logger = "4"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]